Fixing Build Error 2

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ roles:
    end: Dec 2011
    employer: Protech Power
    description: At this job I mainly focused on two rolls, for the first 3 months I primarily working as an electrician’s assistant. In this roll I worked with the electricians at Protech Power, carrying out Protection Relay Testing, Installation of Gas Insulated Switchgear, Cable Termination, Cable Tray Installation, and Cable Identification and Labelling, all for train line demountables. 
-work involved coordinating with different engineers (4) and tradesmen (20), assisting in matching personalities, work styles and desired outcomes. This taught me to be very adaptable with different people you are working with and to identify and coordinated different people's approaches to work. The result expansion of my skills to solve problems in many different approaches and adapting to the most effective approach.
+   description: Work involved coordinating with different engineers (4) and tradesmen (20), assisting in matching personalities, work styles and desired outcomes. This taught me to be very adaptable with different people you are working with and to identify and coordinated different people's approaches to work. The result expansion of my skills to solve problems in many different approaches and adapting to the most effective approach.
 
 #Education is required
 education:
