--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ skills:
  - Wireless Sensor Network
  - Ebedded System Design
  - Rapid Prototyping
+ - Blockchain Development
+ - Computer Vision Development
 
 #Work experience is required
 roles:
@@ -58,9 +60,19 @@ roles:
 #Education is required
 education:
  - level: Bachelor of Engineering (B.Eng.)
-   date: 2012
+   date: 2016
    subject: Mechatronics, Robotics, and Automation Engineering
    school: University of Queensland
+ - level: Certificate
+   date: 2016
+   subject: New Ventures Leadership
+   school: MIT
+
+edx.org:
+   courses:
+    - title: Blockchain for Business
+      link: https://www.edx.org/course/blockchain-business-introduction-linuxfoundationx-lfs171x
+
 
 #Github Projects
 Github:
